--- a/package.json
+++ b/package.json
@@ -45,5 +45,10 @@
   "engines": {
     "node": "6.9.2",
     "npm": "3.10.9"
+  },
+  "scripts": {
+    "deploy": "git push origin master && git push heroku master",
+    "start": "node server.js",
+    "postinstall": "ng build --aot -prod"
   }
 }
