--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "sass-loader": "^6.0.3",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
-    "typescript": "~2.0.0"
+    "typescript": "~2.0.0",
+    "bootstrap-sass": "~3.3.7"
   },
   "engines": {
     "node": "6.9.2",
