--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "core-js": "^2.4.1",
     "express": "^4.15.0",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.7.6",
+    "bootstrap-sass": "~3.3.7",
+    "css-loader": "^0.26.2",
+    "sass-loader": "^6.0.3"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.4.0",
