--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "angular2-jwt": "^0.1.28",
     "angular2-social-login": "^2.0.2",
     "auth0-lock": "^10.12.3",
-    "core-js": "^2.4.1",
-    "express": "^4.15.0",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6",
     "bootstrap-sass": "~3.3.7",
+    "core-js": "^2.4.1",
     "css-loader": "^0.26.2",
-    "sass-loader": "^6.0.3"
+    "express": "^4.15.0",
+    "ng2-search-filter": "^0.1.8",
+    "rxjs": "^5.1.0",
+    "sass-loader": "^6.0.3",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.4.0",
