--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "css-loader": "^0.26.2",
     "express": "^4.15.0",
+    "ng2-pagination": "^2.0.1",
     "rxjs": "^5.1.0",
     "sass-loader": "^6.0.3",
     "zone.js": "^0.7.6"
